--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>你好，我是猪小明</h1>
-            <h2>软件工程师</h2>
+            <h1>Chen-Yuqing</h1>
+            <h2>你好，欢迎光临陈雨晴的个人网站</h2>
             <a href="assets/resume.pdf" target="_blank" class="btn-rounded-white">简历下载</a>
         </div>
         <!-- End #lead-content -->
@@ -76,7 +76,10 @@
                 </div>
                 <div class="col-md-8 vertical-center">
                     <p>
-                        深度互联网从业人员，对互联网保持高度的敏感性和关注度，熟悉产品开发流程，有很强的产品规划、需求分析、交互设计能力，能独立承担APP和WEB项目的管控工作，善于沟通，贴近用户。
+                        00后深度互联网从业人员，对互联网保持高度的敏感性和关注度，熟悉产品开发流程，有很强的产品规划、需求分析、交互设计能力，能独立承担APP和WEB项目的管控工作，善于沟通，贴近用户。本人勤奋好学、积极向上，对待学习工作严谨踏实，有较强的组织、管理能力。工作认真负责，勇于承担任
+                        务与责任，能够快速适应新环境、接受新知识，具有良好的团队合作精神以较好的个人亲和力。具有一定创
+                        新能力，勇于面对各种情况，敢于承担各种压力。
+                        
                     </p>
                 </div>
 
@@ -90,9 +93,9 @@
         <div id="experience-timeline">
 
             <!-- One Experience Block -->
-            <div data-date="2012.09 - 2013.06">
-                <h3>厦门市职业圈信息科技有限公司</h3>
-                <h4>市场营销（实习生</h4>
+            <div data-date="2023.02 - 2023.07">
+                <h3>筹小鸭信息科技有限公司</h3>
+                <h4>新媒体运营（实习生）</h4>
                 <p>
                     负责公司线上端资源的销售工作（以开拓客户为主），公司主要资源以广点通、智汇推、百度、小米、360、沃门户等；
                     <br>
@@ -110,12 +113,12 @@
 
         <!-- One Education Block -->
         <div class="education-block">
-            <h3>职业圈科技大学</h3>
-            <span class="education-date">2009.09 - 2013.07</span>
-            <h4>市场营销（本科）</h4>
+            <h3>宁波财经学院</h3>
+            <span class="education-date">2019.09 - 2023.07</span>
+            <h4>编辑出版学（全日制本科）</h4>
             <p>
                 主修课程：
-                管理学、微观经济学、宏观经济学、管理信息系统、统计学、会计学、财务管理、市场营销、经济法、消费者行为学、国际市场营销
+                传播学、广告学、新闻学、图书编辑与策划、网络编辑、页面编排与创意、音视频剪辑、文化产业、媒介经营与管理、电子报刊设计、摄影摄像
             </p>
         </div>
         <!-- End of One Education Block -->
@@ -193,7 +196,7 @@
 
 
     <div id="projects" class="background-alt-nth">
-        <h2 class="heading">Unity3d Projects</h2>
+        <h2 class="heading">公众号作品</h2>
         <div class="container-game">
 
             <!-- One Project Game Block -->
@@ -202,11 +205,16 @@
                     <img src="assets/thumbs/project02-thumb.jpg" />
                 </div>
                 <div class="project-info">
-                    <h3>Flappy bird demo</h3>
+                    <h3> 
+                        原创人物采访公众号文章</h3>
+                    <h3> 
+                        个人独立策划|攥写|编排|设计<h3>
+                    <h3> 
+                        阅读量640+，点赞130+</h3>
                     <p>
-                        这是一个Flappy bird 的 Demo.
+                        点击下方链接查看原文
                     </p>
-                    <a href="https://curryricegames.itch.io/flappybird-demo" target="_blank">View Project</a>
+                    <a href="https://mp.weixin.qq.com/s/-1WZxMCpFvwrifhkujZTEQ" target="_blank">正能量青年 | “ 你知道吗？人有一万种可能 ”</a>
                 </div>
             </div>
             <!-- End of One Project Game Block -->
@@ -248,9 +256,9 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>普通话一级甲等</li>
+            <li>普通话二级甲等</li>
             <li>大学英语四级</li>
-            <li>大学英语六级</li>
+            <li>机动车驾驶证C1</li>
             <li>全国计算机二级考试</li>
         </ul>
     </div>
@@ -263,25 +271,21 @@
             <!-- One Social Icon Block -->
             <article>
                 <i class="fa fa-envelope fa-fw"></i>
-                <span>88888888@qq.com</span>
+                <span>1046897694@qq.com</span>
             </article>
             <!-- End of One Social Icon Block -->
 
             <article>
                 <i class="fa fa-phone fa-fw"></i>
-                <span>13868686868</span>
-            </article>
-            <article>
-                <i class="fa fa-home fa-fw"></i>
-                <span>301, 24 test St, Montreal, QC, H1A2C2</span>
+                <span>15345886081</span>
             </article>
             <article>
                 <i class="fa fa-weixin fa-fw"></i>
-                <span>13868686868</span>
+                <span>CHJ1046897694</span>
             </article>
             <article>
                 <i class="fa fa-qq fa-fw"></i>
-                <span>78787878</span>
+                <span>1046897694</span>
             </article>
         </div>
         <!-- End #contact-form -->
