--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-md-8 vertical-center">
                     <p>
-                        00后深度互联网从业人员，对互联网保持高度的敏感性和关注度，熟悉产品开发流程，有很强的产品规划、需求分析、交互设计能力，能独立承担APP和WEB项目的管控工作，善于沟通，贴近用户。本人勤奋好学、积极向上，对待学习工作严谨踏实，有较强的组织、管理能力。工作认真负责，勇于承担任
+                        陈雨晴，中共党员，宁波财经学院编辑出版学2019级本科生，2023届优秀毕业生。连续四年获奖学金资格、综测位于专业第二，连续三年荣获优秀学生干部、优秀团员称号，两次校先进个人、先进学生等称号。认真负责，乐于助人，新兴互联网从业人员，对互联网保持高度的敏感性和关注度，熟悉产品开发流程，有很强的产品规划、需求分析、交互设计能力，能独立承担APP和WEB项目的管控工作，善于沟通，贴近用户。本人勤奋好学、积极向上，对待学习工作严谨踏实，有较强的组织、管理能力。工作认真负责，勇于承担任
                         务与责任，能够快速适应新环境、接受新知识，具有良好的团队合作精神以较好的个人亲和力。具有一定创
                         新能力，勇于面对各种情况，敢于承担各种压力。
                         
